syntax = "proto3";
package douyin.core;
option go_package = "videoCenter;";

//video基本信息"
message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}
//User基本信息
message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}
//视频流请求
message douyin_feed_request {
  optional int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  optional string token = 2; // 可选参数，登录用户设置
}
//视频求响应
message douyin_feed_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

//视频投稿请求
message douyin_publish_action_request {
  string token = 1; // 用户鉴权token
  bytes data = 2; // 视频数据
  string title = 3; // 视频标题
}
//视频投稿响应
message douyin_publish_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}
//发布列表请求
message douyin_publish_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}
//发布列表响应
message douyin_publish_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户发布的视频列表
}

service video_center {
  //视频流
  rpc Feed(douyin_feed_request) returns(douyin_feed_response){}
  //发布列表
  rpc PublishList(douyin_publish_list_request) returns(douyin_publish_list_response){}
  //视频投稿
  rpc PublishAction(douyin_publish_action_request) returns(douyin_publish_action_response){}
}